{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 76,
  "lineage": "c2b783f9-b2ed-a912-c9b1-a54cecb6a636",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:656947624260:instance/i-07cb6029f2bc830e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cb6029f2bc830e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-ec2-nikilasilva",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-019655ee287e9a5bc"
              }
            ],
            "primary_network_interface_id": "eni-019655ee287e9a5bc",
            "private_dns": "ip-172-31-75-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.75.31",
            "public_dns": "ec2-44-192-46-48.compute-1.amazonaws.com",
            "public_ip": "44.192.46.48",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c00144952c1892f3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nodejs-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0917803e4d5ff06bb",
            "tags": {
              "Name": "Nodejs-server"
            },
            "tags_all": {
              "Name": "Nodejs-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0110786dbe6659201"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "i-07cb6029f2bc830e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_db_instance.tf_rds_instance",
            "aws_s3_bucket.tf_s3_bucket",
            "aws_security_group.tf_ec2_sg",
            "aws_security_group.tf_rds_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group/sg-0110786dbe6659201",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0110786dbe6659201",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nodejs-server-sg",
            "name_prefix": "",
            "owner_id": "656947624260",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-052228c3aa8df3be9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sg-0110786dbe6659201",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group/sg-0f21c9babbdb9c8a4",
            "description": "Allow Mysql traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f21c9babbdb9c8a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "43.250.243.48/32"
                ],
                "description": "Allow MySQL access from local machine",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from EC2 SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0110786dbe6659201"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mysql-sg",
            "name_prefix": "",
            "owner_id": "656947624260",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-052228c3aa8df3be9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sg-0f21c9babbdb9c8a4",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group-rule/sgr-09cf5e91039615871",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09cf5e91039615871",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0110786dbe6659201",
            "security_group_rule_id": "sgr-09cf5e91039615871",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sgr-09cf5e91039615871",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.tf_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group-rule/sgr-0a0809ed0ed33bb3d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a0809ed0ed33bb3d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f21c9babbdb9c8a4",
            "security_group_rule_id": "sgr-0a0809ed0ed33bb3d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sgr-0a0809ed0ed33bb3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.tf_rds_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_from_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group-rule/sgr-0567b6a96b02db1bb",
            "cidr_ipv4": "43.250.243.48/32",
            "cidr_ipv6": null,
            "description": "Allow MySQL access from local machine",
            "from_port": 3306,
            "id": "sgr-0567b6a96b02db1bb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f21c9babbdb9c8a4",
            "security_group_rule_id": "sgr-0567b6a96b02db1bb",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sgr-0567b6a96b02db1bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.tf_rds_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_nodejs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group-rule/sgr-0678cae45874f5fbf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0678cae45874f5fbf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0110786dbe6659201",
            "security_group_rule_id": "sgr-0678cae45874f5fbf",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sgr-0678cae45874f5fbf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.tf_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group-rule/sgr-01cf3afc37485cd2a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01cf3afc37485cd2a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0110786dbe6659201",
            "security_group_rule_id": "sgr-01cf3afc37485cd2a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sgr-01cf3afc37485cd2a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.tf_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group-rule/sgr-086c0aec2727c73c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "TLS from VPC",
            "from_port": 443,
            "id": "sgr-086c0aec2727c73c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0110786dbe6659201",
            "security_group_rule_id": "sgr-086c0aec2727c73c5",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sgr-086c0aec2727c73c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.tf_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656947624260:security-group-rule/sgr-0d711c8e2475f725d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL traffic from EC2 SG",
            "from_port": 3306,
            "id": "sgr-0d711c8e2475f725d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0110786dbe6659201",
            "region": "us-east-1",
            "security_group_id": "sg-0f21c9babbdb9c8a4",
            "security_group_rule_id": "sgr-0d711c8e2475f725d",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656947624260",
            "id": "sgr-0d711c8e2475f725d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.tf_ec2_sg",
            "aws_security_group.tf_rds_sg"
          ]
        }
      ]
    }
  ]
}